--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -9,3 +9,7 @@ license = "Unlicense"
 repository = "https://github.com/bifrost-platform/cccp-relayer"
 
 [dependencies]
+serde = { version = "1.0.153", default-features = false, features = ["derive"] }
+serde_json = { version = '1.0.94', default-features = false, features = ['alloc'] }
+ethers = "2.0"
+tokio = "1.26.0"
