--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,3 +9,6 @@ license = "Unlicense"
 repository = "https://github.com/bifrost-platform/cccp-relayer"
 
 [dependencies]
+serde = { version = "1.0.153", features = ["derive"] }
+serde_yaml = "0.9.19"
+tokio = { version = "1.22.0", features = ["signal", "rt-multi-thread", "parking_lot"] }
