--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -11,9 +11,11 @@ repository = "https://github.com/bifrost-platform/cccp-relayer"
 [dependencies]
 cc-cli = { path = "../client/cli" }
 cccp-client = { path = "../client" }
+cccp-primitives = { path = "../primitives" }
 sc-cli = { git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35" }
 sc-service = { git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35" }
 serde_yaml = "0.9.19"
+ethers = "2.0"
 
 [[bin]]
 name = "cccp-relayer"
