--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -13,3 +13,4 @@ serde = { version = "1.0.153", default-features = false, features = ["derive"] }
 serde_json = { version = '1.0.94', default-features = false, features = ['alloc'] }
 ethers = "2.0"
 tokio = { version = "1.22.0", features = ["signal", "rt-multi-thread", "parking_lot"] }
+hex = "0.4.3"
