--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ repository = "https://github.com/bifrost-platform/cccp-relayer"
 web3 = "0.18.0"
 cc-cli = { path = "./client/cli" }
 cccp-client = { path = "./client" }
+cccp-primitives = { path = "./primitives" }
 sc-cli = { git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35" }
 sc-service = { git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35" }
 serde_yaml = "0.9.19"
