--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/bifrost-platform/cccp-relayer"
 [dependencies]
 serde = { version = "1.0.153", features = ["derive"] }
 serde_yaml = "0.9.19"
+tokio-stream = "0.1"
 tokio = { version = "1.22.0", features = ["signal", "rt-multi-thread", "parking_lot"] }
 ethers = "2.0"
 web3 = "0.18.0"
