--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -15,5 +15,6 @@ tokio-stream = "0.1"
 tokio = { version = "1.22.0", features = ["signal", "rt-multi-thread", "parking_lot"] }
 ethers = "2.0"
 web3 = "0.18.0"
+ethers = "2.0"
 
 cccp-primitives = { path = "../primitives" }
