--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,6 @@ bitcoin_provider:
 bitcoin_username:
 bitcoin_password:
 
-bfc_provider: "https://private.mainnet.thebifrost.io/rpc"
+bfc_provider:
 
 eth_provider:
