CCCP-51, refactor: initialize new components

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -14,6 +14,7 @@ serde_yaml = "0.9.19"
 tokio-stream = "0.1"
 tokio = { version = "1.22.0", features = ["signal", "rt-multi-thread", "parking_lot"] }
 ethers = "2.0"
+async-trait = "0.1.57"
 
 # local
 cccp-primitives = { path = "../primitives" }
