CCCP-53, chore: ignore configs

--- a/.gitignore
+++ b/.gitignore
@@ -178,4 +178,8 @@ target/
 .history
 .ionide
 
+# Config files
+config.testnet.yaml
+config.mainnet.yaml
+
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,intellij,rust
