--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -9,8 +9,9 @@ license = "Unlicense"
 repository = "https://github.com/bifrost-platform/cccp-relayer"
 
 [dependencies]
-serde = { version = "1.0.153", default-features = false, features = ["derive"] }
-serde_json = { version = '1.0.94', default-features = false, features = ['alloc'] }
+serde = { version = "1.0.153", features = ["derive"] }
+serde_json = { version = '1.0.94', features = ['alloc'] }
 ethers = "2.0"
+thiserror = "1.0.39"
 tokio = { version = "1.22.0", features = ["signal", "rt-multi-thread", "parking_lot"] }
 hex = "0.4.3"
