CCCP-53, refactor: cleanup new codebase (#10)
* CCCP-53, chore: ignore configs

* CCCP-53, refactor: apply spmc for block manager and cleanup codebase

* CCCP-53, Feature: EthClient bridge direction

* Move cli primitives to primitives/src/primitives.rs

* CCCP-53, chore: verify protocol sequence

* CCCP-53, chore: simplify expression on verification

Co-authored-by: Min-seong Kwon <kwonarseus@gmail.com>

---------

Co-authored-by: alstjd0921 <kwonarseus@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -174,6 +174,10 @@ Cargo.lock
 .history
 .ionide
 
+# Config files
+config.testnet.yaml
+config.mainnet.yaml
+
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,intellij,rust
 
 *.local.yaml
