--- a/config.yaml
+++ b/config.yaml
@@ -6,19 +6,20 @@ bitcoin:
 evm_providers:
   - name: "bfc-testnet"
     id: 49088
-    provider: "https://private.chain.thebifrost.io/rpc"
+    provider: ""
     interval: 2000
+    is_native: true
   - name: "eth-goerli"
     id: 5
-    provider: "https://rpc.ankr.com/eth_goerli"
+    provider: ""
     interval: 5000
   - name: "bsc-testnet"
     id: 97
-    provider: "https://data-seed-prebsc-2-s3.binance.org:8545"
+    provider: ""
     interval: 2000
   - name: "matic-mumbai"
     id: 80001
-    provider: "https://polygon-mumbai.chain.thebifrost.io"
+    provider: ""
     interval: 1000
 
 handler_configs:
@@ -43,4 +44,4 @@ handler_configs:
       - chain_id: 80001
         contract: ""
 
-mnemonic: "merge issue noodle follow universe spike donkey cause feature brick equal tool"
+mnemonic: ""
