--- a/offchain/Cargo.toml
+++ b/offchain/Cargo.toml
@@ -10,5 +10,9 @@ repository = "https://github.com/bifrost-platform/cccp-relayer"
 
 [dependencies]
 async-trait = "0.1.57"
+cccp-client = { path = "../client" }
 cccp-primitives = { path = "../primitives" }
 ethers = "2.0"
+reqwest = { version = "0.11.15", features = ["json"] }
+serde_json = "1.0.94"
+tokio = { version = "1.22.0", features = ["macros"] }
