--- a/offchain/Cargo.toml
+++ b/offchain/Cargo.toml
@@ -14,5 +14,6 @@ cccp-client = { path = "../client" }
 cccp-primitives = { path = "../primitives" }
 ethers = "2.0"
 reqwest = { version = "0.11.15", features = ["json"] }
+serde = { version = "1.0.153", features = ["derive"] }
 serde_json = "1.0.94"
 tokio = { version = "1.22.0", features = ["macros"] }
