--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,6 +9,7 @@ license = "Unlicense"
 repository = "https://github.com/bifrost-platform/cccp-relayer"
 
 [dependencies]
+log = "0.4.17"
 serde = { version = "1.0.153", features = ["derive"] }
 serde_yaml = "0.9.19"
 tokio-stream = "0.1"
