--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -9,6 +9,8 @@ license = "Unlicense"
 repository = "https://github.com/bifrost-platform/cccp-relayer"
 
 [dependencies]
+log = "0.4.17"
+env_logger = "0.10.0"
 cc-cli = { path = "../client/cli" }
 cccp-client = { path = "../client" }
 cccp-offchain = { path = "../offchain" }
