CCCP-38, fix: Use cron scheduler for periodic task

--- a/config.yaml
+++ b/config.yaml
@@ -49,7 +49,7 @@ mnemonic: ""
 offchain_configs:
   oracle_price_feeder:
     - network_id: 49088
-      feed_interval: 300
+      schedule: "0 */5 * * * * *"
       contract: "0x0218371b18340aBD460961bdF3Bd5F01858dAB53"
       price_sources: [ Coingecko ]
       symbols: [ "ETH", "BFC", "BNB", "MATIC", "USDC", "BIFI" ]
