--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/bifrost-platform/cccp-relayer"
 
 [dependencies]
 async-trait = "0.1.57"
+cron = "0.12.0"
 serde = { version = "1.0.153", features = ["derive"] }
 serde_json = { version = '1.0.94', features = ['alloc'] }
 ethers = "2.0"
