--- a/config.yaml
+++ b/config.yaml
@@ -45,3 +45,11 @@ handler_configs:
         contract: "0xB2ba0020560cF6c164DC48D1E29559AbA8472208"
 
 mnemonic: ""
+
+offchain_configs:
+  oracle_price_feeder:
+    - chain_id: 49088
+      schedule: "0 */5 * * * * *"
+      contract: "0x0218371b18340aBD460961bdF3Bd5F01858dAB53"
+      price_sources: [ Coingecko ]
+      symbols: [ "ETH", "BFC", "BNB", "MATIC", "USDC", "BIFI" ]
