--- a/offchain/Cargo.toml
+++ b/offchain/Cargo.toml
@@ -9,3 +9,15 @@ license = "Unlicense"
 repository = "https://github.com/bifrost-platform/cccp-relayer"
 
 [dependencies]
+async-trait = "0.1.57"
+cc-cli = { path = "../client/cli" }
+cccp-client = { path = "../client" }
+cccp-primitives = { path = "../primitives" }
+chrono = "0.4.24"
+cron = "0.12.0"
+ethers = "2.0"
+reqwest = { version = "0.11.15", features = ["json"] }
+serde = { version = "1.0.153", features = ["derive"] }
+serde_json = "1.0.94"
+serde_yaml = "0.9.19"
+tokio = { version = "1.22.0", features = ["macros"] }
