--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -9,9 +9,12 @@ license = "Unlicense"
 repository = "https://github.com/bifrost-platform/cccp-relayer"
 
 [dependencies]
+async-trait = "0.1.57"
+cron = "0.12.0"
 serde = { version = "1.0.153", features = ["derive"] }
 serde_json = { version = '1.0.94', features = ['alloc'] }
 ethers = "2.0"
+reqwest = { version = "0.11.15", features = ["json"] }
 thiserror = "1.0.39"
 tokio = { version = "1.22.0", features = ["signal", "rt-multi-thread", "parking_lot"] }
 hex = "0.4.3"
