--- a/offchain/Cargo.toml
+++ b/offchain/Cargo.toml
@@ -9,6 +9,7 @@ license = "Unlicense"
 repository = "https://github.com/bifrost-platform/cccp-relayer"
 
 [dependencies]
+log = "0.4.17"
 async-trait = "0.1.57"
 cc-cli = { path = "../client/cli" }
 cccp-client = { path = "../client" }
