--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -2,20 +2,21 @@
 name = "cccp-client"
 version = "0.1.0"
 description = "The client implementation for BIFROST relayer"
-authors = ["bifrost-platform"]
-homepage = "https://thebifrost.io"
-edition = "2021"
-license = "Unlicense"
-repository = "https://github.com/bifrost-platform/cccp-relayer"
+authors = { workspace = true }
+homepage = { workspace = true }
+edition = { workspace = true }
+license = { workspace = true }
+repository = { workspace = true }
 
 [dependencies]
-log = "0.4.17"
-serde = { version = "1.0.153", features = ["derive"] }
-serde_yaml = "0.9.19"
-tokio-stream = "0.1"
-tokio = { version = "1.22.0", features = ["signal", "rt-multi-thread", "parking_lot"] }
-ethers = "2.0.2"
-async-trait = "0.1.57"
+# General
+log = { workspace = true }
+ethers = { workspace = true }
+serde_yaml = { workspace = true }
+tokio-stream = { workspace = true }
+async-trait = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
+tokio = { workspace = true, features = ["signal", "rt-multi-thread", "parking_lot"] }
 
-# local
+# CCCP
 cccp-primitives = { path = "../primitives" }
