--- a/periodic/Cargo.toml
+++ b/periodic/Cargo.toml
@@ -2,23 +2,27 @@
 name = "cccp-periodic"
 version = "0.1.0"
 description = "The offchain implementation for BIFROST relayer"
-authors = ["bifrost-platform"]
-homepage = "https://thebifrost.io"
-edition = "2021"
-license = "Unlicense"
-repository = "https://github.com/bifrost-platform/cccp-relayer"
+authors = { workspace = true }
+homepage = { workspace = true }
+edition = { workspace = true }
+license = { workspace = true }
+repository = { workspace = true }
 
 [dependencies]
-log = "0.4.17"
-async-trait = "0.1.57"
+# General
+log = { workspace = true }
+async-trait = { workspace = true }
+
+chrono = { workspace = true }
+cron = { workspace = true }
+ethers = { workspace = true }
+serde_json = { workspace = true }
+serde_yaml = { workspace = true }
+reqwest = { workspace = true, features = ["json"] }
+serde = { workspace = true, features = ["derive"] }
+tokio = { workspace = true, features = ["macros"] }
+
+# CCCP
 cc-cli = { path = "../client/cli" }
 cccp-client = { path = "../client" }
 cccp-primitives = { path = "../primitives" }
-chrono = "0.4.24"
-cron = "0.12.0"
-ethers = "2.0.2"
-reqwest = { version = "0.11.15", features = ["json"] }
-serde = { version = "1.0.153", features = ["derive"] }
-serde_json = "1.0.94"
-serde_yaml = "0.9.19"
-tokio = { version = "1.22.0", features = ["macros"] }
