--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -2,19 +2,20 @@
 name = "cccp-primitives"
 version = "0.1.0"
 description = "The primitives for BIFROST relayer"
-authors = ["bifrost-platform"]
-homepage = "https://thebifrost.io"
-edition = "2021"
-license = "Unlicense"
-repository = "https://github.com/bifrost-platform/cccp-relayer"
+authors = { workspace = true }
+homepage = { workspace = true }
+edition = { workspace = true }
+license = { workspace = true }
+repository = { workspace = true }
 
 [dependencies]
-async-trait = "0.1.57"
-cron = "0.12.0"
-serde = { version = "1.0.153", features = ["derive"] }
-serde_json = { version = '1.0.94', features = ['alloc'] }
-ethers = "2.0.2"
-reqwest = { version = "0.11.15", features = ["json"] }
-thiserror = "1.0.39"
-tokio = { version = "1.22.0", features = ["signal", "rt-multi-thread", "parking_lot", "macros"] }
-hex = "0.4.3"
+# General
+hex = { workspace = true }
+cron = { workspace = true }
+ethers = { workspace = true }
+thiserror = { workspace = true }
+async-trait = { workspace = true }
+reqwest = { workspace = true, features = ["json"] }
+serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true, features = ["alloc"] }
+tokio = { workspace = true, features = ["signal", "rt-multi-thread", "parking_lot", "macros"] }
