--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -16,5 +16,5 @@ serde_json = { version = '1.0.94', features = ['alloc'] }
 ethers = "2.0.2"
 reqwest = { version = "0.11.15", features = ["json"] }
 thiserror = "1.0.39"
-tokio = { version = "1.22.0", features = ["signal", "rt-multi-thread", "parking_lot"] }
+tokio = { version = "1.22.0", features = ["signal", "rt-multi-thread", "parking_lot", "macros"] }
 hex = "0.4.3"
