--- a/config.yaml
+++ b/config.yaml
@@ -89,3 +89,7 @@ periodic_configs:
     authority_address: "0x0000000000000000000000000000000000000400"
     socket_address: "0x0218371b18340aBD460961bdF3Bd5F01858dAB53"
     relayer_manager_address: "0x0000000000000000000000000000000000002000"
+  heartbeat:
+    schedule: "0 * * * * * *" # Every minute.
+    authority_address: "0x0000000000000000000000000000000000000400"
+    relayer_manager_address: "0x0000000000000000000000000000000000002000"
