--- a/config.yaml
+++ b/config.yaml
@@ -34,13 +34,13 @@ handler_configs:
   - handler_type: Socket
     watch_list:
       - chain_id: 49088
-        contract: "0x0218371b18340aBD460961bdF3Bd5F01858dAB53"
+        contract: &socket_bfc "0x0218371b18340aBD460961bdF3Bd5F01858dAB53"
       - chain_id: 5
-        contract: "0xeF5260Db045200142a6B5DDB297e860099ffd51d"
+        contract: &socket_eth "0xeF5260Db045200142a6B5DDB297e860099ffd51d"
       - chain_id: 97
-        contract: "0x8039c3AD8ED55509fD3f6Daa78867923fDe6E61c"
+        contract: &socket_bsc "0x8039c3AD8ED55509fD3f6Daa78867923fDe6E61c"
       - chain_id: 80001
-        contract: "0xA25357F3C313Bd13885678f935178211f0dF6722"
+        contract: &socket_matic "0xA25357F3C313Bd13885678f935178211f0dF6722"
   - handler_type: Vault
     watch_list:
       - chain_id: 49088
@@ -54,16 +54,16 @@ handler_configs:
   - handler_type: Roundup
     watch_list:
       - chain_id: 49088
-        contract: "0x0218371b18340aBD460961bdF3Bd5F01858dAB53"
+        contract: *socket_bfc
     roundup_utils:
       - contract_type: Socket
-        contract: "0xeF5260Db045200142a6B5DDB297e860099ffd51d"
+        contract: *socket_eth
         chain_id: 5
       - contract_type: Socket
-        contract: "0x8039c3AD8ED55509fD3f6Daa78867923fDe6E61c"
+        contract: *socket_bsc
         chain_id: 97
       - contract_type: Socket
-        contract: "0xA25357F3C313Bd13885678f935178211f0dF6722"
+        contract: *socket_matic
         chain_id: 80001
       - contract_type: Authority
         contract: "0xF51f7e267D2D966f8d3Ff2fea42B410bB14800e1"
@@ -87,7 +87,7 @@ periodic_configs:
   roundup_emitter:
     schedule: "*/15 * * * * * *" # Every 15th seconds.
     authority_address: "0x0000000000000000000000000000000000000400"
-    socket_address: "0x0218371b18340aBD460961bdF3Bd5F01858dAB53"
+    socket_address: *socket_bfc
     relayer_manager_address: "0x0000000000000000000000000000000000002000"
   heartbeat:
     schedule: "0 * * * * * *" # Every minute.
