--- a/client/cli/Cargo.toml
+++ b/client/cli/Cargo.toml
@@ -11,6 +11,7 @@ repository = { workspace = true }
 [dependencies]
 # General
 log = { workspace = true }
+sentry = { workspace = true }
 chrono = { workspace = true }
 futures = { workspace = true }
 thiserror = { workspace = true }
