--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -20,6 +20,7 @@ serde = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = ["signal", "rt-multi-thread", "parking_lot"] }
 k256 = { workspace = true, features = ["ecdsa"] }
 sha3 = { workspace = true }
+serde_json = "1.0"
 
 # CCCP
 cccp-primitives = { path = "../primitives" }
