--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -22,5 +22,9 @@ k256 = { workspace = true, features = ["ecdsa"] }
 sha3 = { workspace = true }
 serde_json = "1.0"
 
+
 # CCCP
 cccp-primitives = { path = "../primitives" }
+
+[dev-dependencies]
+serde_json = { workspace = true }
