--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [workspace]
 members = [
-	"client",
-	"client/cli",
-	"periodic",
-	"primitives",
+    "client",
+    "client/cli",
+    "periodic",
+    "primitives",
     "relayer",
 ]
 
@@ -37,6 +37,8 @@ serde_json = "1.0.94"
 
 hex = "0.4.3"
 ethers = "2.0.2"
+k256 = "0.13.1"
+sha3 = "0.10.7"
 
 tokio = "1.22.0"
 tokio-stream = "0.1"
