--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -18,7 +18,7 @@ tokio-stream = { workspace = true }
 async-trait = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = ["signal", "rt-multi-thread", "parking_lot"] }
-k256 = { workspace = true }
+k256 = { workspace = true, features = ["ecdsa"] }
 sha3 = { workspace = true }
 
 # CCCP
