--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ env_logger = "0.10.0"
 sentry = "0.30.0"
 
 async-trait = "0.1.57"
+async-recursion = "1.0.4"
 clap = "4.2.1"
 cron = "0.12.0"
 chrono = "0.4.24"
