CCCP-78, feature: bootstrap protocol (#21)
* CCCP-78, feature: get offset height based on block time of each chain

* CCCP-78, chore: check the event was already done

* CCCP-78, feature: add bootstrapState and wait until bootstrapping completed

* CCCP-78, test: get request from requestID

* CCCP-78, refactor: change to get_logs

* CCCP-78, refactor: remove unused code and set chunk size for get_logs

* CCCP-78, feature: add nodeSyncing status and change to check status based on source client

* CCCP-78, refactor: change BootstrapState to vector of itself to know state of each chain

* CCCP-78, chore: replace retry to recursion

* CCCP-78, chore: increase gas coefficient

---------

Co-authored-by: dnjscksdn98 <dnjscksdn98@gmail.com>

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -16,10 +16,15 @@ ethers = { workspace = true }
 serde_yaml = { workspace = true }
 tokio-stream = { workspace = true }
 async-trait = { workspace = true }
+async-recursion = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = ["signal", "rt-multi-thread", "parking_lot"] }
 k256 = { workspace = true, features = ["ecdsa"] }
 sha3 = { workspace = true }
 
+
 # CCCP
 cccp-primitives = { path = "../primitives" }
+
+[dev-dependencies]
+serde_json = { workspace = true }
