--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ chrono = "0.4.24"
 thiserror = "1.0.39"
 futures = "0.3.26"
 reqwest = "0.11.15"
+rand = "0.8.5"
 
 serde_yaml = "0.9.19"
 serde = "1.0.153"
