--- a/config.yaml
+++ b/config.yaml
@@ -24,7 +24,7 @@ evm_providers:
     provider: ""
     call_interval: 6000
     block_confirmations: 1
-    is_relay_target: true
+    is_relay_target: false
     socket_address: "0xeF5260Db045200142a6B5DDB297e860099ffd51d"
     vault_address: "0x7EB02c73349B3De1406e6b433c5bA1a526CBF253"
     authority_address: "0xF51f7e267D2D966f8d3Ff2fea42B410bB14800e1"
@@ -33,7 +33,7 @@ evm_providers:
     provider: ""
     call_interval: 1500
     block_confirmations: 5
-    is_relay_target: true
+    is_relay_target: false
     socket_address: "0x8039c3AD8ED55509fD3f6Daa78867923fDe6E61c"
     vault_address: "0x27C66cb5caa07C9B332939c357c789C606f5054C"
     authority_address: "0xCf9f6428A309b6652a1dfaA4d8aB8B61C9c7E8CF"
@@ -42,7 +42,7 @@ evm_providers:
     provider: ""
     call_interval: 1000
     block_confirmations: 7
-    is_relay_target: true
+    is_relay_target: false
     socket_address: "0xA25357F3C313Bd13885678f935178211f0dF6722"
     vault_address: "0xB2ba0020560cF6c164DC48D1E29559AbA8472208"
     authority_address: "0x2FD5232fDFa6e1c127e7821CC48108Ca79281a38"
