--- a/configs/config.mainnet.yaml
+++ b/configs/config.mainnet.yaml
@@ -8,54 +8,54 @@ bitcoin:
   password: ""
 
 evm_providers:
-  - name: "bfc-testnet"
-    id: 49088
+  - name: "bifrost"
+    id: 3068
     provider: ""
     call_interval: 1500
     block_confirmations: 5
     is_native: true
     is_relay_target: true
-    socket_address: "0x0218371b18340aBD460961bdF3Bd5F01858dAB53"
-    vault_address: "0x90381bB369D4F8069fdA9246b23637a78c5d1c83"
+    socket_address: "0xd551F33Ca8eCb0Be83d8799D9C68a368BA36Dd52"
+    vault_address: "0xD85EB87caB9041ad00764b95796702b1104F42D7"
     authority_address: "0x0000000000000000000000000000000000000400"
     relayer_manager_address: "0x0000000000000000000000000000000000002000"
-  - name: "eth-goerli"
-    id: 5
+  - name: "ethereum"
+    id: 1
     provider: ""
     call_interval: 6000
     block_confirmations: 1
     is_relay_target: false
-    socket_address: "0xeF5260Db045200142a6B5DDB297e860099ffd51d"
-    vault_address: "0x7EB02c73349B3De1406e6b433c5bA1a526CBF253"
-    authority_address: "0xF51f7e267D2D966f8d3Ff2fea42B410bB14800e1"
-  - name: "bsc-testnet"
-    id: 97
+    socket_address: "0x4A31FfeAc276CC5e508cAC0568d932d398C4DD84"
+    vault_address: "0x2F95C102Cc26875406BC689Fb01aE382B82AA535"
+    authority_address: "0xAdcaa90cabDc730855064d5b0f5242c16A9B7E10"
+  - name: "bsc"
+    id: 56
     provider: ""
     call_interval: 1500
     block_confirmations: 5
     is_relay_target: false
-    socket_address: "0x8039c3AD8ED55509fD3f6Daa78867923fDe6E61c"
-    vault_address: "0x27C66cb5caa07C9B332939c357c789C606f5054C"
-    authority_address: "0xCf9f6428A309b6652a1dfaA4d8aB8B61C9c7E8CF"
-  - name: "matic-mumbai"
-    id: 80001
+    socket_address: "0xb5Fa48E8B9b89760a9f9176388D1B64A8D4968dF"
+    vault_address: "0x78ae4c0FD4f02CA79A2d8738d3369A4Bc5D4E323"
+    authority_address: "0xF0500d77d5446665314722b963ab1F71872063E9"
+  - name: "polygon"
+    id: 137
     provider: ""
     call_interval: 1000
     block_confirmations: 7
     is_relay_target: false
-    socket_address: "0xA25357F3C313Bd13885678f935178211f0dF6722"
-    vault_address: "0xB2ba0020560cF6c164DC48D1E29559AbA8472208"
-    authority_address: "0x2FD5232fDFa6e1c127e7821CC48108Ca79281a38"
+    socket_address: "0x050606CC2Bcd9504991Be2c309D6c6c832Bb5bd0"
+    vault_address: "0x5fA7fe5F94f2D15585a3134C1C5d3019c8c1645d"
+    authority_address: "0x7F48909fBd1E38f1e05B5E326A44175fc2462B13"
 
 handler_configs:
   - handler_type: BridgeRelay
-    watch_list: [49088, 5, 97, 80001]
+    watch_list: [3068, 1, 56, 137]
   - handler_type: Roundup
-    watch_list: [49088]
+    watch_list: [3068]
 
 periodic_configs:
   oracle_price_feeder:
-    - chain_id: 49088
+    - chain_id: 3068
       schedule: "0 */5 * * * * *" # Every 5th minute.
       price_sources: [Coingecko]
       symbols: ["ETH", "BFC", "BNB", "MATIC", "USDC", "BIFI", "USDT"]
