CCCP-13, chore: use metric labels

--- a/metrics/Cargo.toml
+++ b/metrics/Cargo.toml
@@ -13,6 +13,10 @@ repository = { workspace = true }
 lazy_static = { workspace = true }
 prometheus = { workspace = true }
 sentry = { workspace = true }
+ethers = { workspace = true }
 
 # CCCP
 cccp-primitives = { path = "../primitives" }
+
+# Substrate
+prometheus-endpoint = { workspace = true }
